feat: configurando swagger em todas as rotas
