# src/controllers/user-controller.js
@@ -11,7 +11,13 @@ import { removeMaskTel } from '../util/tel';
 
 export const getUser = async (req, res, next) => {
   /* #swagger.tags = ["Usuários"] */
-
+  /* #swagger.description = "Essa rota traz um usuário especifico pelo ID" */
+  /* #swagger.parameters['id'] = {
+      in: "path",
+      description: "ID da empresa",
+      required: true,
+      type: string,
+  } */
   const { id } = req.params;
 
   try {
@@ -36,7 +42,7 @@ export const getUser = async (req, res, next) => {
 
 export const getUsers = async (req, res) => {
   /* #swagger.tags = ["Usuários"] */
-
+  /* #swagger.description = "Essa rota traz todos os usuários" */
   const users = await UserModel.find({
     companyId: req.user.companyId,
   }).select(['-password']);
@@ -48,7 +54,16 @@ export const getUsers = async (req, res) => {
 
 export const createUser = async (req, res, next) => {
   /* #swagger.tags = ["Usuários"] */
-
+  /* #swagger.description = "Essa rota cria usuários" */
+  /* #swagger.requestBody = { 
+    required: true, 
+    content: { 
+      "application/json": { 
+        schema: { $ref: "#/components/schemas/CreateUser" }, 
+      } 
+    } 
+    } 
+  */
   const { body } = req;
 
   try {
@@ -99,7 +114,16 @@ export const createUser = async (req, res, next) => {
 
 export const updateUser = async (req, res, next) => {
   /* #swagger.tags = ["Usuários"] */
-
+  /* #swagger.description = "Essa rota edita um usuário" */
+  /* #swagger.requestBody = { 
+    required: true, 
+    content: { 
+      "application/json": { 
+        schema: { $ref: "#/components/schemas/EditUser" }, 
+      } 
+    } 
+    } 
+  */
   const { body } = req;
 
   const passwordHashed = body.password
@@ -131,7 +155,13 @@ export const updateUser = async (req, res, next) => {
 
 export const deleteUser = async (req, res, next) => {
   /* #swagger.tags = ["Usuários"] */
-
+  /* #swagger.description = "Essa rota deleta um usuário especifico pelo ID" */
+  /* #swagger.parameters['id'] = {
+      in: "path",
+      description: "ID da empresa",
+      required: true,
+      type: string,
+  } */
   const { id } = req.params;
 
   try {
